--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./2023 Winter Jam Mouse.html"
+export_path="export/index.html"
 script_export_mode=1
 script_encryption_key=""
 
